--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ h1,.front_page_section_caption {
     text-transform: uppercase;
     letter-spacing: 0px;
     margin-top: 0.8em;
-    margin-bottom: 0.3em
+    margin-bottom: 0.3em;
+     word-break: break-all;
 }
 
 h2 {
@@ -63,7 +64,8 @@ h2 {
     text-transform: uppercase;
     letter-spacing: 0px;
     margin-top:0px;
-    margin-bottom: 0.4em
+    margin-bottom: 0.4em;
+     word-break: break-all;
 }
 
 h3 {
@@ -76,7 +78,8 @@ h3 {
     text-transform: uppercase;
     letter-spacing: 0px;
     margin-top: 1.1833em;
-    margin-bottom: 0.4em
+    margin-bottom: 0.4em;
+     word-break: break-all;
 }
 
 h4 {
@@ -89,7 +92,8 @@ h4 {
     text-transform: uppercase;
     letter-spacing: 0px;
     margin-top: 1.63em;
-    margin-bottom: 0.625em
+    margin-bottom: 0.625em;
+     word-break: break-all;
 }
 
 h5 {
@@ -102,7 +106,8 @@ h5 {
     text-transform: none;
     letter-spacing: 0px;
     margin-top: 1.2888em;
-    margin-bottom: 0.4667em
+    margin-bottom: 0.4667em;
+     word-break: break-all;
 }
 
 h6 {
@@ -115,7 +120,8 @@ h6 {
     text-transform: none;
     letter-spacing: 0px;
     margin-top: 1.8125em;
-    margin-bottom: 0.5em
+    margin-bottom: 0.5em;
+     word-break: break-all;
 }
 
 
@@ -198,6 +204,7 @@ font-family: 'Economica', sans-serif;
     background-color: var(--coloryellow);
     touch-action: manipulation;
     color: black;
+    word-break: break-all;
     
   
     backdrop-filter: none;
@@ -218,7 +225,8 @@ font-family: 'Economica', sans-serif;
     left: 5px;
     display: block;
     height: 1.22em;
-    width: 415px;
+    width: 100%;
+    max-width: 415px;
     z-index: -1;
     background: #f2d71f;
     color: black !important;
@@ -370,7 +378,8 @@ justify-content: space-around;
     left: 5px;
     display: block;
     height: 1.22em;
-    width: 200px;
+    width: 100%;
+    max-width: 200px;
     z-index: -1;
     background: rgb(210, 39, 86) !important;
     color: black !important;
@@ -394,6 +403,7 @@ font-size: 20px;
     background-color: var(--coloryellow);
     touch-action: manipulation;
     color: black;
+    word-wrap: break-word;
     
   
     backdrop-filter: none;
@@ -415,7 +425,8 @@ font-size: 20px;
     left: 5px;
     display: block;
     height: 1.22em;
-    width: 200px;
+    max-width: 200px;
+    width: 100%;
     z-index: -1;
     background:#f2d71f!important;
     color: black !important;
@@ -481,5 +492,57 @@ button.btn.btn-secondary {
        font-weight: 500;
 }
 .connect-withus{
-    
+
+}
+a.product-linkwrapper {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media(max-width:520px){
+    .header-nav-left .header-menulinks{
+        display: none;
+    }
+    .carousel-item {
+    height: 14rem !important;
+}
+.carousel-text-header {
+    z-index: 10;
+    background-color: rgb(210, 39, 86);
+    touch-action: manipulation;
+    color: rgb(255, 255, 255);
+    width: 100% !important;
+    height: 58px;
+    min-height: 0px;
+    min-width: 0px;
+    max-height: none;
+    max-width: none;
+    backdrop-filter: none;
+    filter: none;
+    transform-origin: 50% 50%;
+    opacity: 1;
+    transform: translate(0px, 0px);
+    visibility: visible;
+}
+
+h2 {
+    font-family: "Bungee",cursive;
+    font-size: 2rem;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 0.875em;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0px;
+    margin-top: 0px;
+    margin-bottom: 0.4em;
+    word-break: break-all;
+}
+}
+
+button.btn.btn-secondary {
+        background:#f2d71f!important;
+    color: blak;
 }
